# nixpkgs-mcp

./: .gitignore  .mcp.json  ARCHITECTURE.md  QUICKSTART.md  README.md  TODO.md  flake.nix  pyproject.toml  server.py  test_server.py
.claude/: settings.local.json
